# metaparser-android

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  keystore.properties_example
app/: build.gradle  proguard-rules.pro
app/src/androidTest/kotlin/org/emunix/metaparser/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: metaparser.lua  restart.lua
app/src/main/c/: CMakeLists.txt
app/src/main/c/Instead/: CMakeLists.txt  metaparser.c
app/src/main/c/Lua/: CMakeLists.txt
app/src/main/kotlin/org/emunix/metaparser/: Game.kt  Metaparser.kt  MetaparserException.kt  Paragraph.kt
app/src/main/kotlin/org/emunix/metaparser/di/: EngineInteractorModule.kt  PreferenceModule.kt  StorageModule.kt
app/src/main/kotlin/org/emunix/metaparser/helper/: AccessibilityHelper.kt  AppVersionHelper.kt  ConsumableEvent.kt  ResourceProvider.kt  StorageHelper.kt  TagParser.kt  ThemeHelper.kt  ext.kt
app/src/main/kotlin/org/emunix/metaparser/preferences/: ApplicationPreferences.kt  ApplicationPreferencesImpl.kt
app/src/main/res/font/: default_font.xml  literata.xml
app/src/main/res/layout/: activity_game_list_item.xml  activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/values-w600dp/: dimens.xml
app/src/main/res/values-w800dp/: dimens.xml
app/src/test/kotlin/org/emunix/metaparser/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
